spelling, regular layout

--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -4,9 +4,11 @@ No matter how optimized the representation of the data is and how available we m
 of the existence of the resource, they can not use it.
 
 \subsubsection*{Suggested strategies} 
+
 The best way is to advertise the product in the right media with right format.
 
-\subsubsection*{In the context of Aire Guru \ldots} 
+\subsubsection*{In the context of Aire Guru \ldots}
+
 Our tool is implemented for the city of Málaga, so we are currently working to publicize it in this city.
 It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones) \\
 Aire Guru participated in the first open data reuse contest organized by the Málaga City Council (http://cemi.malaga.eu/es/novedades/detalle/1-Concurso-de-Reutilizacion-de-Datos-Abiertos-del-Ayuntamiento-de-Malaga)
@@ -21,9 +23,9 @@ and was a finalist in the web page category.
     \caption{I Contest of reuse of open data. Málaga's town hall}
     \end{figure}
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
 
 \begin{itemize}
     \done It is currently published in the open data portal of the City of Málaga.
-\crossed More work should be done on advertising the platform and making it known.
+    \crossed More work should be done on advertising the platform and making it known.
 \end{itemize}
