--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -45,7 +45,7 @@ Our tool uses the air quality data provided by the city of Málaga in its open d
 
 Aire Guru (https:\\aire.guru) offers all the necessary information on a web platform which has been designed to facilitate human understanding.
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
 
 \begin{itemize}
     \done Location. Finding data is made simple, since information is displayed immediately on accessing the website. The main page
