--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -1,4 +1,5 @@
 \subsection{Use concepts and language that your user understands}
+
 The key point is that the user must be able to understand what we are trying to transmit. We must create a fluid, 
 easy interaction between the user and the representation of the data. Therefore we must speak with the language of 
 the ordinary person, using common vocabulary, avoiding specialist jargon and communicating the objective in the simplest, 
@@ -6,6 +7,7 @@ clearest manner. This representation of information plays a fundamentally import
 the meaning in a natural way.
 
 \subsubsection*{Suggested strategies} 
+
 Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
 resources needed to help the user to understand and place the information in context. 
 
@@ -18,6 +20,7 @@ if we talk about samples and we want to know the density, we will lean towards a
 between sexes, we will use a pie chart.
 
 \subsubsection*{In the context of Aire Guru \ldots} 
+
 The Aire Guru tool presents the information in the native language of the city, using simple vocabulary and a 
 straightforward style.
 Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
@@ -65,7 +68,8 @@ In addition, to explain the concept of AQI and create an awarnes about the influ
 glossary. This aids understanding of why air pollution should matter to us, with descriptions of the pollutants, medical complications, sources of contamination, the iconography used and
 an explanation of what AQI is and how it is calculated. \\
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
+
 \begin{itemize}
     \done The language used in the whole tool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
     \done The most appropriate graphs for each type of data have been researched and chosen.
