--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -48,7 +48,7 @@ Aire-Guru uses three specific techniques to generate emotional engagement:
 
 \end{itemize}
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
 
 \begin{itemize}
     \done
