--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -23,7 +23,7 @@ It is attractive to the user and try to improve it.
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 The user is offered a platform that indicates his exposure to totally customized air pollution if the need to carry
-no device for reading pollutans.
+no device for reading pollutants.
 
 
 
@@ -54,10 +54,10 @@ user can view the exposure to the pollution to which he has been subjected.
     Using the import Google chronology button, we can import the location history provided by the
     pollution that has been exposed since 2018. In the help section we can find a guide how to
     export and import this history of locations.
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
 \begin{itemize}
     \done Unique feature, fully customized pollution exposure monitoring
-    \done Description of the effects, polluting sources, description of the pollutans in a single platform
+    \done Description of the effects, polluting sources, description of the pollutants in a single platform
     \crossed Presenting how exposure to pollution can be reduced more specifically
     
 \end{itemize}
