--- a/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
+++ b/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
@@ -1,8 +1,9 @@
 \subsection{The user interface must be obvious and familiar}
+
 The system can display the data in a precise, optimized, fully customized way. It can offer the user
- the possibility to improve their life considerably. However, if we do not provide a user friendly experience, all our efforts will be in vain.
- The user should feel that the system offers information in a fluid, intuitive, direct, straightforward manner and with
- a logical sequence.
+the possibility to improve their life considerably. However, if we do not provide a user friendly experience, all our efforts will be in vain.
+The user should feel that the system offers information in a fluid, intuitive, direct, straightforward manner and with
+a logical sequence.
   
 This logical sequence will allow the user the possibility of doing further investigating by themselves.
 
@@ -24,6 +25,7 @@ be like a two-way conversation, where we ask and let them know we are listening 
 requires information from the system, they receive an indication that their request is being processed, and within no more than five seconds, an answer will be provided.
     
 \subsubsection*{Suggested strategies} 
+
 We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
 The structure will entail a logical sequence, as if it were a narrative history.
 Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
@@ -31,13 +33,13 @@ We will steer clear of complicated representations, we will aim for familiarity 
 For example, if a calendar is used for the selection of dates, it doesn't make sense to use an hourglass, this will just be confusing forthe user.
 Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
 
-\subsubsection*{In the context of Aire Guru \ldots} 
+\subsubsection*{In the context of Aire Guru \ldots}
+
 Our tool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
 We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
 Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.
 
 The graphics have been designed in 2D, since they are easier to interpret and we lack the ambiguity that can occur when using depth as a measure.
-
 
 The workflow of the different sections of Aire Guru is thought about in detail.
 Aire Guru consists of different sections. By selecting a point on the map, we
@@ -48,14 +50,13 @@ exposed.
 It is expected that the user will be interested in the level of pollution to which they are exposed in real time. Therefore, for users
 that are identified and agree to share their location, Air Guru will show the pollution directly at the point where they are.
 
-
 \begin{figure}[ht]
     \centering
     \includegraphics[width=12cm]{myLocation}
     \caption{My Location}
 \end{figure}
 
-Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by pollutans. Finally, in the lower area where we have
+Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by pollutants. Finally, in the lower area where we have
 the historical data by area and personalization, we can visualize the information with different levels of detail; time, day, month and year. We can also
 select the date we want.
 \begin{figure}[ht]
@@ -67,7 +68,7 @@ select the date we want.
        { \includegraphics[width=5.5cm]{MedicalConditionFilter}}
     \vfill
      \subfigure[Pollutans filter]
-     { \centering \includegraphics[width=6cm]{pollutansFilter}}
+     { \centering \includegraphics[width=6cm]{pollutantsFilter}}
   
   \caption{Filters}
     \end{figure}
@@ -102,16 +103,12 @@ select the date we want.
             
              Today we are all familiar with GoogleMaps maps, so it makes sense to integrated this function.      
 
+\subsubsection*{Evaluation}
 
-
-
-
-\elsparagraph{Evaluation}  
 \begin{itemize}
     \done Has a prevailing relaxed visual aesthetic.
-   \done The representation follows a logical sequence.
+    \done The representation follows a logical sequence.
     \done Familiarity - repetition of structures and representational colors create quick familiarity with the interface, and commonly used standard iconography is respected.
     \done Flexibility. The user can make multiple selections.
     \crossed Waiting times should be improved.
-    
 \end{itemize}
