--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -1,4 +1,5 @@
 \subsection{Understand your purpose}
+
 Our mission aside from reaching the defined objective is to attract users.
 A user will seek us because are unique, because we offer something that
 nobody else is offering, because we provide something that they need.
@@ -17,12 +18,15 @@ This is where we can make use of the most appropriate marketing techniques to re
 We will have to conduct a study of our target audience, find out what type of advertising they consume and through which channels, so we can approach them in the most appropriate way. Todays market is in a fast paced state of continuous change,
 so we must be flexible and adapt to find the perfect formula.
 
-\subsubsection*{Suggested strategies} 
+\subsubsection*{Suggested strategies}
+
 We must study and analyze what the current gaps in the market are, and what needs the user might have that aren't being met.
 We need to define the target audience. What do they use in their daily life to keep informed or for entertainment? What type of advertising do they already consume? How can we get closer to them? Keep in mind that we must stay
 faithful to the spirit of what we represent, so as well as understanding what advertising fits the user, we should know what kind of advertising
 adapts most suitably to our product.
-\subsubsection*{In the context of Aire Guru \ldots} 
+
+\subsubsection*{In the context of Aire Guru \ldots}
+
 The mission of Aire Guru is to increase the awareness of the quality of the air.
 There are several problems regarding this issue, the first one is user ignorance. Users may not be
 aware of the levels of pollution to which they are exposed and may not even know how it pollution can harm them
@@ -33,7 +37,7 @@ can clearly understand. It aims to make the information, and what that informati
 are, so that we can increase awareness and empower users to do something about it.
 
 
-Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the pollutans and the sources that produce these pollutans. It is accompanied by an iconography
+Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the pollutants and the sources that produce these pollutants. It is accompanied by an iconography
 which reflects each of the symptoms. \\
 
 \begin{figure}[ht]
@@ -46,9 +50,10 @@ which reflects each of the symptoms. \\
   
   \caption{Glossary}
     \end{figure}
-\elsparagraph{Evaluation}  
+
+\subsubsection*{Evaluation}  
+
 \begin{itemize}
     \done In the survey conducted, users told us that their interest in air pollution had grown. Some of them discovered that they had a medical condition that is affected by the pollution.
     \crossed Air Guru needs more expansion.
-    
 \end{itemize}
