--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -1,4 +1,5 @@
 \subsection{The facts, and just the facts}
+
 It is not unusual to make the mistake of trying to keep the user too much information, offering unneccessary or redundant data.
  
 This defeats the objective of being relevant to the user. We don't want the user to be distracted or lost in the middle
@@ -15,7 +16,8 @@ sure of his reading of the data, since when we direct the user to official sourc
 get a real explanation, reinforce the credibility of the representations we are making. In any case,
 outside of the main representation, because the user will not have to access this information continuously.
 
-\subsubsection*{Suggested strategies} 
+\subsubsection*{Suggested strategies}
+
 Focus on the objective, show only the data directly related to our goal, do not annotate the data
 simply because it appears in the dataset, and don't include distracting technical details irrelevant to the user.
 
@@ -45,14 +47,13 @@ intermediate measures in the dataset.
     \caption{Personal Records}
 \end{figure}
 
+\subsubsection*{Evaluation}  
 
-\elsparagraph{Evaluation}  
 \begin{itemize}
     \done The information not relevant to the user has been removed.
-         \crossed Exact measurements have been given. This data is quite technical for the user, but 
-         it lends veracity to the data. Therefore we have given it a secondary position so it doesn't distract the user.
-         \crossed It has implemented a functionality to export the data. The comments of our testers revealed
-         that this functionality is not useful for the average user, since they do not have the necessary tools to
-         analyze the data and all the information is represented in a better format in the tool itself.
-    
+    \crossed Exact measurements have been given. This data is quite technical for the user, but 
+    it lends veracity to the data. Therefore we have given it a secondary position so it doesn't distract the user.
+    \crossed It has implemented a functionality to export the data. The comments of our testers revealed
+    that this functionality is not useful for the average user, since they do not have the necessary tools to
+    analyze the data and all the information is represented in a better format in the tool itself.
 \end{itemize}
