--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -44,9 +44,9 @@ the air quality index (AQI), specifically the European air quality index (EAQI).
 It shows the AQI in the whole city of Málaga by zones, both the general and the AQI of each of the 
 pollutants in a more disaggregated form from September 2018 to the present. It also shows the evolution
 of these for days, months and years.
-It is capable of creating a set of the most relevant pollutans by medical condition. An innovative feature is the capacity to display levels of any particular pollutant by hour, day, month, or year. 
+It is capable of creating a set of the most relevant pollutants by medical condition. An innovative feature is the capacity to display levels of any particular pollutant by hour, day, month, or year. 
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}  
 
 \begin{itemize}
     \done The information is focused on an objective, informing the user of the level of pollution that surrounds them, both  in real time
