--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -1,4 +1,7 @@
 \subsection{Remove all barriers to access}
+
+THIS SEEMS TO BE THE WRONG CONTENT FOR "CONVENIENT"
+
 As we mentioned earlier, our goal is for the user to have direct access to the data without having to deal with any
 of the technical processes involved in implementing a collection system. The points we must cover to achieve this goal are: \\
 
@@ -14,12 +17,14 @@ familiar. For example, it is more likely that the user will want to access the d
 to install new software on their devices. \\
 
 \subsubsection*{Suggested strategies} 
+
 We will have to provide all the afore-mentioned infrastructure which can collect the data and offer it to the user in an accessible, relevant and compelling way.
 We will try to free the user from repetitive actions, we will automate all possible processes, to make the information available immediately.
 We must offer the information through a platform with which the user is familiar, nowadays the use of websites or mobile applications is very common.
 We must not make the user perform complicated steps, or require them to add extra software or hardware.
 
 \subsubsection*{In the context of Aire Guru \ldots} 
+
 Malaga's air quality dataset is updated every hour, Aire Guru automates the process of collecting the
 data through a CRON job that executes a script implemented in JavaScript periodically. This reads the data from the url, processes it,
 cleans and stores it in a MongoDB database. That is to say, Aire Guru implements all the necessary collection processes.
@@ -52,11 +57,12 @@ As we commented previously, all users can see the basic information without havi
 perform downloads or installations. Today, almost everyone is familiar with web browsing and if we do not force the user to realize extra taks, as 
 requiring them to sign in or install extra software, the probability the user uses our platform will be higher. 
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation} 
+
 \begin{itemize}
-\done The data necessary for our model has been extracted from the raw data.
-\done Infrastructure. Aire Guru implements all the necessary architecture of storage, processing and visualization so that the user only has to consult
-the data.
-\done It automates the processes of data collection and the necessary calculations to show the information to the user.
-\done It offers users a free web page, and facilitates the users direct access to information.
+    \done The data necessary for our model has been extracted from the raw data.
+    \done Infrastructure. Aire Guru implements all the necessary architecture of storage, processing and visualization so that the user only has to consult
+    the data.
+    \done It automates the processes of data collection and the necessary calculations to show the information to the user.
+    \done It offers users a free web page, and facilitates the users direct access to information.
 \end{itemize}
