--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -1,4 +1,5 @@
 \subsection{Present consequences and outcomes}
+
 To make a good selection in the dataset of the fields that are relevant or the combination of these, it is essential to
 solid knowledge on the subject to be treated. Therefore, it is fundamental to dedicate the necessary time to enter the
 importance of the concept, what benefits it can bring or what situations can dameage us.
@@ -17,15 +18,17 @@ The points that should be clear in the design phase are: \\
 we should start simple and move to more complex representations.
 
 \subsubsection*{Suggested strategies} 
+
 Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
 Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
 If not directly, we the combination of them. Next, we decide which values are more outstanding and we will provide them to the user.
 
-\subsubsection*{In the context of Aire Guru \ldots} 
+\subsubsection*{In the context of Aire Guru \ldots}
+
 Our main objective is to create awareness of the importance of air pollution in our health. For this we investigate different concepts:
 \begin{itemize}
     \item What diseases are affected by air pollution
-    \item What pollutans are those that create or influence diseases
+    \item What pollutants are those that create or influence diseases
     \item What are the sources of each pollutant?
     \item What is the representative measure of the level of air pollution.
     \item How it is calculated and what parameters we need for its calculation
@@ -41,7 +44,7 @@ affect different diseases in different ways. \\
 
 As the main objective is awareness, we provide all the data in an organized way in the Glossary of Air Guru. \\
 
-Once these pollutans are selected, we verify if we have the particular data in our dataset. As we mentioned earlier, some samples show measurements 
+Once these pollutants are selected, we verify if we have the particular data in our dataset. As we mentioned earlier, some samples show measurements 
 from fixed and / or mobile stations and these can be quantitative or qualitative and others can be incomplete. We will have to select the
 samples to provide us with the most complete information or the most accurate, in this case the quantitative measure will prevail to the qualitative 
 one and in the case that there is only qualitative
@@ -69,10 +72,10 @@ totally different, designed to clearly convey danger. \\
     he wanta to know the breakdown of the pollutants at the point where he is, he can continue to inquire. The map, in addition to showing
     the point where the user is, serves as verification, gives more realism and confidence to the user.
 
-\elsparagraph{Evaluation}  
+\subsubsection*{Evaluation}
+
 \begin{itemize}
     \done The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
     \done Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru tool. They stand out clearly so that the user is able to locate them quickly.
-     \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
-         
+    \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
 \end{itemize}
